--- a/cog.yaml
+++ b/cog.yaml
@@ -4,14 +4,18 @@
 build:
   # set to true if your model requires a GPU
   gpu: true 
-  cuda: "12.1"
-
+  cuda: "12.1" #REVERT: add this back in
+  # cuda: "11.8.0"
   # a list of ubuntu apt packages to install
+
+  #TODO: ISSUE IS WITH CUDA VERSION? 
+  
   system_packages:
     - "libgl1-mesa-glx"
     - "libglib2.0-0"
     - "libsndfile1"
     - "ffmpeg"
+    # - "libhdf5-serial-dev" #REVERT: delete this
 
   # python version in the form '3.11' or '3.11.4'
   python_version: "3.8.18"
@@ -59,6 +63,7 @@ build:
 
   # commands run after the environment is setup
   run:
+    # - "pip install --no-binary=h5py h5py" #REVERT: delete this
     - "pip install --upgrade numpy"
     - "pip install --upgrade numba"
     - "pip install --upgrade librosa"
