--- a/cog.yaml
+++ b/cog.yaml
@@ -1,73 +1,118 @@
 # Configuration for Cog ⚙️
 # Reference: https://cog.run/yaml
-
 build:
   # set to true if your model requires a GPU
   gpu: true 
-  cuda: "12.1" #REVERT: add this back in
+  # cuda: "12.1" #REVERT: add this back in
   # cuda: "11.8.0"
   # a list of ubuntu apt packages to install
 
   #TODO: ISSUE IS WITH CUDA VERSION? 
-  
+
   system_packages:
     - "libgl1-mesa-glx"
     - "libglib2.0-0"
     - "libsndfile1"
     - "ffmpeg"
-    # - "libhdf5-serial-dev" #REVERT: delete this
+    # - "libhdf5-dev" #REVERT: delete this
+    # - "libhdf5-serial-dev"
+    # - "hdf5-tools"
+    # - "h5utils" 
 
   # python version in the form '3.11' or '3.11.4'
+  # python_version: "3.8.18"
   python_version: "3.8.18"
 
   #a list of packages in the format <package-name>==<version>
   python_packages:
-    - "numpy"
-    - "torch==2.2.1"
-    - "torchaudio==2.2.1"
-    - "nemo-toolkit==1.21.0"
-    - "pyannote.audio==3.1.1"
-    - "hydra-core==1.3.2"
-    - "PySoundFile"
-    - "transformers==4.33.3"
-    - "Cython"
-    - "inflect"
-    - "webdataset==0.1.62"
-    - "editdistance==0.8.1"
-    - "aiohttp==3.9.3"
-    - "colorama==0.4.6"
-    - "flake8==3.7.9"
-    - "g2p-en==2.1.0"
-    - "h2==4.1.0"
-    - "hydra-core==1.3.2"
-    - "ipywidgets==8.1.2"
-    - "kaldi-python-io==1.2.2"
-    - "kaldiio==2.18.0"
-    - "marshmallow==3.20.2"
-    - "moviepy==1.0.3"
-    - "nemo-toolkit==1.21.0"
-    - "openpyxl==3.1.2"
-    - "pre-commit==3.5.0"
-    - "pyannote.audio==3.1.1"
-    - "pydub==0.25.1"
-    - "pygtrie==2.5.0"
-    - "pytest==7.4.0"
-    - "resampy==0.4.2"
-    - "shellingham==1.5.4"
-    - "sox==1.4.1"
-    - "spleeter==2.3.2"
-    - "texterrors==0.4.4"
-    - "transformers==4.33.3"
-    - "yamllint==1.23.0"
-    - "jiwer" 
+      # - "torch==2.2.1" 
+      # - "torchvision==0.12.0" 
+      # - "torchaudio==0.11.0" 
+      # - "--index-url https://download.pytorch.org/whl/cu118"
+      # - "https://github.com/pyannote/pyannote-audio/archive/refs/tags/3.1.1.zip"
+      - "pyannote.audio"
+    # - "h5py"
+    # - "numpy"
+    # - "torch==2.2.1"
+    # - "torchaudio==2.2.1"
+    # - "PySoundFile"
+    # - "Cython"
+    # - "inflect"
+    # - "webdataset==0.1.62"
+    # - "editdistance==0.8.1"
+    # - "aiohttp==3.9.3"
+    # - "colorama==0.4.6"
+    # - "flake8==3.7.9"
+    # - "g2p-en==2.1.0"
+    # - "h2==4.1.0"
+    # - "hydra-core==1.3.2"
+    # - "ipywidgets==8.1.2"
+    # - "kaldi-python-io==1.2.2"
+    # - "kaldiio==2.18.0"
+    # - "marshmallow==3.20.2"
+    # - "moviepy==1.0.3"
+    # - "nemo-toolkit==1.21.0"
+    # - "openpyxl==3.1.2"
+    # - "pre-commit==3.5.0"
+    # - "pyannote.audio==3.1.1"
+    # - "pydub==0.25.1"
+    # - "pygtrie==2.5.0"
+    # - "pytest==7.4.0"
+    # - "resampy==0.4.2"
+    # - "shellingham==1.5.4"
+    # - "sox==1.4.1"
+    # - "spleeter==2.3.2"
+    # # - "spleeter"
+    # - "texterrors==0.4.4"
+    # - "transformers==4.33.3"
+    # - "yamllint==1.23.0"
+    # - "jiwer" 
 
   # commands run after the environment is setup
   run:
-    # - "pip install --no-binary=h5py h5py" #REVERT: delete this
-    - "pip install --upgrade numpy"
-    - "pip install --upgrade numba"
-    - "pip install --upgrade librosa"
-    - "pip install youtokentome"
+    # - "pip install aiohttp==3.9.3"
+    # - "pip install billboard.py==7.0.0"
+    # - "pip install black==19.10b0"
+    # - "pip install colorama==0.4.6"
+    # - "pip install cython==3.0.8"
+    # - "pip install django-cors-headers==4.3.1"
+    # - "pip install django-debug-toolbar==4.3.0"
+    # - "pip install djangorestframework==3.15.0"
+    # - "pip install editdistance==0.8.1"
+    # - "pip install flake8==3.7.9"
+    # - "pip install g2p-en==2.1.0"
+    # - "pip install h2==4.1.0"
+    # - "pip install hydra-core==1.3.2"
+    # - "pip install ipywidgets==8.1.2"
+    # - "pip install jiwer==3.0.3"
+    # - "pip install kaldi-python-io==1.2.2"
+    # -  "pip install kaldiio==2.18.0"
+    # - "pip install marshmallow==3.20.2"
+    # - "pip install moviepy==1.0.3"
+    # - "pip install nemo-toolkit==1.21.0"
+    # - "pip install openpyxl==3.1.2"
+    # - "pip install pip-chill==1.0.3"
+    # - "pip install pre-commit==3.5.0"
+    # - "pip install pyannote.audio==3.1.1"
+    # - "pip install pydub==0.25.1"
+    # - "pip install pygtrie==2.5.0"
+    # - "pip install pytest==7.4.0"
+    # - "pip install pytube==15.0.0"
+    # - "pip install resampy==0.4.2"
+    # - "pip install sacremoses==0.1.1"
+    # - "pip install shellingham==1.5.4"
+    # - "pip install sox==1.4.1"
+    # - "pip install spleeter==2.3.2"
+    # - "pip install texterrors==0.4.4"
+    # - "pip install transformers==4.33.3"
+    # - "pip install wandb==0.16.3"
+    # - "pip install webdataset==0.1.62"
+    # - "pip install yamllint==1.23.0"
+    # - "pip install --upgrade typing-extensions"
+    # - "pip install --upgrade numpy"
+    # - "pip install --upgrade numba"
+    # - "pip install --upgrade librosa"
+    # - "pip install youtokentome"
     - "echo env is ready!"
 
 # predict.py defines how predictions are run on your model
