--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,22 @@
-aiohttp==3.9.3
-colorama==0.4.6
-cython==3.0.8
+torch==2.2.1
+torchaudio==2.2.1
+nemo_toolkit[all]==1.21.0
+hydra-core==1.3.2
+transformers==4.33.3
+pyannote.audio==3.1.1
+pydub==0.25.1
+
+python-dotenv==1.0.1
+resampy==0.4.2
+
+Requests==2.31.0
+Django==4.2.10
 django-cors-headers==4.3.1
 django-debug-toolbar==4.3.0
 djangorestframework==3.15.0
-editdistance==0.8.1
-flake8==3.7.9
-g2p-en==2.1.0
-google-api-python-client==2.116.0
+google_api_python_client==2.116.0
 google-cloud-storage==2.14.0
+protobuf==3.20.3
 gunicorn==21.2.0
-h2==4.1.0
-httptools==0.6.1
-hydra-core==1.3.2
-ipywidgets==8.1.2
-kaldi-python-io==1.2.2
-kaldiio==2.18.0
-kubernetes==29.0.0
-marshmallow==3.20.2
-nemo-toolkit==1.21.0
-openpyxl==3.1.2
-pre-commit==3.5.0
-pyannote.audio==3.1.1
-pydub==0.25.1
-pygtrie==2.5.0
-pytest==7.4.0
-python-dotenv==1.0.1
-pytube==15.0.0
-resampy==0.4.2
-rfc3986==1.5.0
-sacremoses==0.1.1
-shellingham==1.5.4
-sox==1.4.1
-spleeter==2.3.2
-texterrors==0.4.4
-transformers==4.33.3
-uvloop==0.19.0
-wandb==0.16.3
-watchfiles==0.21.0
-webdataset==0.1.62
-websockets==12.0
-yamllint==1.23.0
+
+
