--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ hydra-core==1.3.2
 transformers==4.33.3
 pyannote.audio==3.1.1
 pydub==0.25.1
-
+pytube==15.0.0
 python-dotenv==1.0.1
 resampy==0.4.2
 
